beta3:
+ Add BuildCraft pipe support for Receivers!
+ Add the ability to whitelist dimensions.
+ Add "registerURIHandler" (String: class name) to register an IURIHandler via IMC.
* Refactored IURIHandler to require far less boilerplate code.

beta2:
+ Add "getID" to the ComputerCraft APIs, to get the ID of the current device.
+ Add "hasItem" and "canSendItem" to ComputerCraft Ender Transmitter API - that way you can automate item sending better.
+ Improve item duct (Thermal Expansion 3) compatibility - you don't need a chest as a buffer anymore!
* /enreload now properly recovers from failure to reload.
* Fix major implementation bugs in the sending method.
/ BETA2 CANNOT PROPERLY COMMUNICATE WITH ANY VERSION BEFORE BETA2! The reason for that is the major bugs in the item sending method mentioned above - the format of communication had to be changed. (This may happen any number of times until we move to rc1/0.2.0. But I will try to promise that it won't.)

beta1:
+ Add the ability to use EnderNet UIDs (/eninfo) for blacklisted items
+ Add the ability to use item blacklist as whitelist
+ Add the /enreload command to re-load the config file.
+ Add crafting recipes!

alpha12:
* Fix bug introduced by threading that caused serious item duplication.
* Fix it again!

alpha11:
+ Add support for blacklisting receivable item types in config.
+ Add permission system for URIHandlers.
  / Specify in permissions: [...] in endernet-servers.json.
  / Supported permissions: "item", "message".
+ ComputerCraft API now gives name of the server the message was received from.
* The EnderNet HTTP accesses are now threaded. Far less crashes!

alpha10:
+ Add ComputerCraft API!

alpha9a:
* Fixed an NPE in particle spawning
* Fixed SMP bugs, making the mod function correctly on servers

alpha8:
+ Add "receiveFromDefinedOnly" config option. Setting it to true makes you only able to receive from defined servers.
+ Add WAILA integration (shows ID of transmitter/receiver on hover).
